Final commits